@@ -1,3 +1,8 @@
+1998-12-05  Frank Ch. Eigler  <fche@elastic.org>
+
+	* gx-translate.c (m32r_emit_short_insn): Correct ABI result
+	handling for TRAP insn.
+
 1998-12-01  Frank Ch. Eigler  <fche@elastic.org>
 
 	* Makefile.in (SIM_OBJS): Don't build sim-core.o.  
